--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,15 +7,10 @@
    "database": "typeorm",
    "synchronize": true,
    "logging": true,
-   "entities": [
-      "src/entity/**/*.ts"
-   ],
-   "migrations": [
-      "src/migration/**/*.ts"
-   ],
-   "subscribers": [
-      "src/subscriber/**/*.ts"
-   ],
+   "migrations_run": true,
+   "entities": ["src/entity/**/*.ts"],
+   "migrations": ["src/migration/**/*.ts"],
+   "subscribers": ["src/subscriber/**/*.ts"],
    "cli": {
       "entitiesDir": "src/entity",
       "migrationsDir": "src/migration",
